Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - your.domain.com
      secretName: wisecow-tls
  rules:
    - host: your.domain.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wisecow-service
              port:
                number: 4499
